Corrected some overlaps bugs in animations

--- a/src/styles/banner.css
+++ b/src/styles/banner.css
@@ -19,12 +19,7 @@
   margin: 0px;
   margin-right: 50px;
 }
-#imgPerfil:hover {
-  animation-name: rotate;
-  animation-duration: .3s;
-  animation-fill-mode:forwards;
-  animation-delay: 0.3s;
-}
+
 @keyframes rotate {
   0% {
     transform: rotate(0);
