--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -14,7 +14,7 @@
     transform:translatey(0)
   }
   60%{
-    transform:translatey(-26px)
+    transform:translatey(-24px)
   }
 }
 
